# lgfxgl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
.cmake/api/v1/reply/: cache-v2-fca63f18812a9af2a6d4.json  target-main-Debug-da91fc070c397041cd47.json
include/: glad.c  stb_image.h
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/glad/: glad.h
include/glm/detail/: func_integer.inl
src/: game.cpp  game.h  handle_input.cpp  main.cpp  testgui.cpp  testgui.h
src/gfx/: abo.h  camera.cpp  camera.h  gfx.h  glad_include.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp  window.h
src/imgui/: animation_curve.cpp  animation_curve.h  imgui_helper.cpp  imgui_helper.h
src/math/: bezier.cpp  bezier.h  perlin.cpp  perlin.h  perlin_noise_map.cpp  perlin_noise_map.h
src/mesh/: cube.cpp  cube.h  mesh.cpp  mesh.h  perlin_plane.cpp  perlin_plane.h
src/shaders/: color.frag  color.vert  phong.frag  plain_fragment.frag  plain_vertex.vert  texture.frag  texture.vert  textured_terrain.frag  textured_terrain.vert
